# inquisitor

./: Cargo.toml  readme.md
src/: handler.rs  main.rs  model.rs  resolver.rs  routes.rs
www/: index.html
